@@ -425,8 +425,9 @@ utility.o: svnversion.h
 if IS_SVN_BUILD
 # Get version info from SVN
 svnversion.h: ChangeLog Makefile $(svn_deps)
-	echo '/* svnversion.h.  Generated by Makefile from svn info.  */' > $@
-	(cd $(srcdir) \
+	@echo '  svn info | $$(VERSION_FROM_SVN_INFO) > $@'
+	@echo '/* svnversion.h.  Generated by Makefile from svn info.  */' > $@
+	@(cd $(srcdir) \
 	 && svnversion 2>/dev/null | sed -n 's,^\([0-9].*\),REV  "\1",p' \
 	 && TZ= LC_ALL=C svn info 2>/dev/null \
 	 | sed -n 'h;s,^.* Date: *\([^ ]*\) .*$$,DATE "\1",p;g;s,^.* Date: *[^ ]* *\([^ ]*\) .*$$,TIME "\1",p') \
@@ -435,8 +436,9 @@ else
 
 # SVN not available, guess version info from Id strings
 svnversion.h: ChangeLog Makefile
-	echo '/* svnversion.h.  Generated by Makefile from Id strings.  */' > $@
-	(cd $(srcdir) && cat ChangeLog Makefile.am configure.ac smart*.in *.cpp *.h *.s) \
+	@echo '  cat ChangeLog $$(SOURCES) | $$(VERSION_FROM_SVN_IDS) > $@'
+	@echo '/* svnversion.h.  Generated by Makefile from Id strings.  */' > $@
+	@(cd $(srcdir) && cat ChangeLog Makefile.am configure.ac smart*.in *.cpp *.h *.s) \
 	| sed -n 's,^.*\$$[I][d]: [^ ]* \([0-9][0-9]* [0-9][-0-9]* [0-9][:0-9]*\)[^:0-9][^$$]*\$$.*$$,\1,p' \
 	| sort -n -r \
 	| sed -n 'h;s,^\([^ ]*\) .*$$,REV  "\1",p;g;s,^[^ ]* \([^ ]*\) .*$$,DATE "\1",p;g;s,^[^ ]* [^ ]* \([^ ]*\)$$,TIME "\1",p;q' \
@@ -598,13 +600,16 @@ MAN_FILTER = \
 
 # Implicit rule 'smart%: smart%.in ...' does not work with BSD make
 smartctl.8: smartctl.8.in Makefile svnversion.h
-	cat $(srcdir)/smartctl.8.in | $(MAN_FILTER) > $@
+	@echo '  cat $(srcdir)/smartctl.8.in | $$(MAN_FILTER) > $@'
+	@cat $(srcdir)/smartctl.8.in | $(MAN_FILTER) > $@
 
 smartd.8: smartd.8.in Makefile svnversion.h
-	cat $(srcdir)/smartd.8.in | $(MAN_FILTER) > $@
+	@echo '  cat $(srcdir)/smartd.8.in | $$(MAN_FILTER) > $@'
+	@cat $(srcdir)/smartd.8.in | $(MAN_FILTER) > $@
 
 smartd.conf.5: smartd.conf.5.in Makefile svnversion.h
-	cat $(srcdir)/smartd.conf.5.in | $(MAN_FILTER) > $@
+	@echo '  cat $(srcdir)/smartd.conf.5.in | $$(MAN_FILTER) > $@'
+	@cat $(srcdir)/smartd.conf.5.in | $(MAN_FILTER) > $@
 
 # Commands to convert man pages into .html and .txt
 # TODO: configure
