@@ -2,6 +2,12 @@ $Id$
 
 2014-06-27  Christian Franke  <franke@computer.org>
 
+	Makefile.am: Silence build of man pages and svnversion.h.
+	This makes '--enable-silent-rules' or 'make V=0' more effective
+	(available since automake 1.13).
+
+2014-06-27  Christian Franke  <franke@computer.org>
+
 	drivedb.h:
 	- Crucial/Micron RealSSD C300/M500: New attributes (ticket #326)
 	- SandForce Driven SSDs: ADATA XM11, Corsair Force LS, OWC Aura Pro 6G
